# MyProjects

Project1/: CMakeLists.txt  README.txt  main.cpp  staffmember.cpp  staffmember.h
